--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow/tfjs": "^4.6.0",
     "alert": "^5.1.4",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.1",
